# oclminify

./: CHANGES  LICENSE  MANIFEST.in  README.md  setup.py
examples/: oclminify.cmake
examples/cmake/: CMakeLists.txt  kernel1.cl  kernel2.cl  main.cpp
examples/compress/: CMakeLists.txt  addone.cl  main.cpp
examples/minimal/: build.sh  kernel.cl  main.c
oclminify/: __main__.py  build.py  functions.py  generator.py  lexer.py  minifier.py  minify.py  parser.py
tests/: test_minifier.py
